# editon

./: README.md  SYNC_FEATURE.md  index.html  package-lock.json  package.json  update.json
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 1024x1024.icns
src-tauri/src/: db_lib.rs  ffmpeg.rs  folder_lib.rs  image_lib.rs  lib.rs  main.rs  models.rs  sound_lib.rs  utils.rs  yt_dlp.rs
src/components/: Layout.tsx  Navbar.tsx  router-provider.tsx  title-bar.tsx  wavesurfer.tsx
src/components/ui/: button.tsx
src/hooks/: useEventListeners.ts
src/lib/: global-audio-player.ts  utils.ts
src/pages/image/: index.tsx
src/pages/new/: index.tsx
src/pages/sfx/: index.tsx
src/pages/video/: index.tsx
src/pages/youtube-download/: index.tsx
src/stores/: asset-store.ts  nav-store.ts  view-store.ts
src/types/: tauri.ts
