[package]
name = "editon"
version = "0.1.0"
description = "Editor Asset Management App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "editon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-drag = "2.1.0"
walkdir = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
symphonia = { version = "0.5.5", features = ["all"] }
uuid = { version = "1.19.0", features = ["v4"] }
fast_image_resize = { version = "6.0", default-features = false, features = ["no_std"] }
image = { version = "0.25.9" }
