[package]
name = "Editon"
version = "0.1.7"
description = "Editor Asset Management App"
authors = ["aldimenur"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "editon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-drag = "2.1.0"
walkdir = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
symphonia = { version = "0.5.5", features = ["all"] }
fast_image_resize = { version = "6.0", default-features = false, features = [
    "no_std",
] }
image = { version = "0.25.9" }
libwebp = { version = "0.1.2", features = ["0_6"] }
rayon = { version = "1.11.0" }
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
reqwest = { version = "0.13.1", features = ["stream"] }
zip = { version = "7.2.0" }
futures-util = { version = "0.3.31" }
tokio = { version = "1.49.0", features = ["full"] }
notify = "8.1.0"
